--- a/graphit/graphit/Base.lproj/Main.storyboard
+++ b/graphit/graphit/Base.lproj/Main.storyboard
@@ -130,24 +130,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RvB-uf-IIA">
-                                <rect key="frame" x="0.0" y="28" width="600" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <connections>
-                                    <action selector="nameDidGetEdited:" destination="fJP-Jc-XK7" eventType="editingDidEnd" id="ANG-I4-GgO"/>
-                                    <outlet property="delegate" destination="fJP-Jc-XK7" id="lzk-nJ-Hld"/>
-                                </connections>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Ba-Hp-Jvi">
-                                <rect key="frame" x="0.0" y="75" width="600" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                <connections>
-                                    <action selector="valueDidGetEdited:" destination="fJP-Jc-XK7" eventType="editingDidEnd" id="0pk-zl-SQJ"/>
-                                    <outlet property="delegate" destination="fJP-Jc-XK7" id="7Ac-aT-2fM"/>
-                                </connections>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVt-QL-gR2">
                                 <rect key="frame" x="452" y="545" width="37" height="30"/>
                                 <state key="normal" title="Done"/>
@@ -162,8 +144,8 @@
                                     <segue destination="dne-GV-5do" kind="unwind" identifier="cancel" unwindAction="backFromPieValue:" id="bT8-Tv-2VG"/>
                                 </connections>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oNK-BU-uka">
-                                <rect key="frame" x="0.0" y="127" width="600" height="60"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oNK-BU-uka">
+                                <rect key="frame" x="0.0" y="200" width="600" height="60"/>
                                 <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="paz-UH-oQz">
                                     <size key="itemSize" width="50" height="50"/>
@@ -183,28 +165,116 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0QJ-3y-QPO">
+                                <rect key="frame" x="0.0" y="20" width="600" height="180"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rqQ-4i-f7L">
+                                        <rect key="frame" x="12" y="45" width="116" height="90"/>
+                                        <color key="backgroundColor" red="1" green="0.86348416969999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oar-RG-2bj">
+                                        <rect key="frame" x="180" y="3" width="420" height="174"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RvB-uf-IIA">
+                                                <rect key="frame" x="0.0" y="29" width="420" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <connections>
+                                                    <action selector="nameDidGetEdited:" destination="fJP-Jc-XK7" eventType="editingDidEnd" id="ANG-I4-GgO"/>
+                                                    <outlet property="delegate" destination="fJP-Jc-XK7" id="lzk-nJ-Hld"/>
+                                                </connections>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Ba-Hp-Jvi">
+                                                <rect key="frame" x="0.0" y="116" width="420" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                <connections>
+                                                    <action selector="valueDidGetEdited:" destination="fJP-Jc-XK7" eventType="editingDidEnd" id="0pk-zl-SQJ"/>
+                                                    <outlet property="delegate" destination="fJP-Jc-XK7" id="7Ac-aT-2fM"/>
+                                                </connections>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="RvB-uf-IIA" firstAttribute="width" secondItem="Oar-RG-2bj" secondAttribute="width" id="5Rb-Fn-DQ0"/>
+                                            <constraint firstItem="RvB-uf-IIA" firstAttribute="centerX" secondItem="Oar-RG-2bj" secondAttribute="centerX" id="9YS-y3-3oa"/>
+                                            <constraint firstItem="RvB-uf-IIA" firstAttribute="centerY" secondItem="Oar-RG-2bj" secondAttribute="centerY" multiplier="0.5" id="AjC-bQ-E6w"/>
+                                            <constraint firstItem="7Ba-Hp-Jvi" firstAttribute="width" secondItem="Oar-RG-2bj" secondAttribute="width" id="FEt-fr-RLM"/>
+                                            <constraint firstItem="7Ba-Hp-Jvi" firstAttribute="centerX" secondItem="Oar-RG-2bj" secondAttribute="centerX" id="Qvh-fO-u0O"/>
+                                            <constraint firstItem="7Ba-Hp-Jvi" firstAttribute="centerY" secondItem="Oar-RG-2bj" secondAttribute="centerY" multiplier="1.5" id="R9K-Zh-9Ya"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="width" secondItem="0QJ-3y-QPO" secondAttribute="height" multiplier="35:64" id="29b-da-E74"/>
+                                    <constraint firstItem="Oar-RG-2bj" firstAttribute="centerY" secondItem="0QJ-3y-QPO" secondAttribute="centerY" id="6Nu-su-eVW"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="top" secondItem="0QJ-3y-QPO" secondAttribute="top" constant="32" id="9Sh-cn-Hdh"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="width" secondItem="0QJ-3y-QPO" secondAttribute="height" multiplier="29:45" id="Bl2-oN-ccP"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="centerY" secondItem="0QJ-3y-QPO" secondAttribute="centerY" id="C7p-ad-LZa"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="height" secondItem="0QJ-3y-QPO" secondAttribute="height" multiplier="0.5" id="Ill-v5-yer"/>
+                                    <constraint firstItem="Oar-RG-2bj" firstAttribute="leading" secondItem="rqQ-4i-f7L" secondAttribute="trailing" constant="52" id="Lud-L3-Z3g"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="leading" secondItem="0QJ-3y-QPO" secondAttribute="leading" constant="12" id="R0v-5c-sNz"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="centerY" secondItem="Oar-RG-2bj" secondAttribute="centerY" id="bEY-JS-EFE"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="height" secondItem="0QJ-3y-QPO" secondAttribute="height" multiplier="0.5" id="fhV-V2-4z6"/>
+                                    <constraint firstItem="Oar-RG-2bj" firstAttribute="top" secondItem="0QJ-3y-QPO" secondAttribute="top" constant="3" id="iNf-YY-H9D"/>
+                                    <constraint firstAttribute="trailing" secondItem="Oar-RG-2bj" secondAttribute="trailing" id="l7n-uK-uEU"/>
+                                    <constraint firstItem="Oar-RG-2bj" firstAttribute="width" secondItem="0QJ-3y-QPO" secondAttribute="width" multiplier="0.7" id="pjI-nP-HS8"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="width" secondItem="0QJ-3y-QPO" secondAttribute="width" multiplier="0.2" id="uOQ-Bb-iOt"/>
+                                    <constraint firstItem="rqQ-4i-f7L" firstAttribute="width" secondItem="0QJ-3y-QPO" secondAttribute="height" multiplier="1:1" id="udz-Tz-Gpb"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="29b-da-E74"/>
+                                        <exclude reference="9Sh-cn-Hdh"/>
+                                        <exclude reference="Ill-v5-yer"/>
+                                        <exclude reference="uOQ-Bb-iOt"/>
+                                        <exclude reference="udz-Tz-Gpb"/>
+                                        <exclude reference="6Nu-su-eVW"/>
+                                    </mask>
+                                </variation>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="7Ba-Hp-Jvi" firstAttribute="centerX" secondItem="K19-3M-4pi" secondAttribute="centerX" id="2hb-sQ-aQk"/>
-                            <constraint firstItem="RvB-uf-IIA" firstAttribute="width" secondItem="K19-3M-4pi" secondAttribute="width" id="4TP-JM-Nxh"/>
-                            <constraint firstItem="7Ba-Hp-Jvi" firstAttribute="top" secondItem="RvB-uf-IIA" secondAttribute="bottom" constant="19" id="5GM-2X-k6M"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="top" secondItem="6wb-gx-98n" secondAttribute="bottom" id="0Qc-wF-Tor"/>
                             <constraint firstAttribute="trailingMargin" secondItem="jVt-QL-gR2" secondAttribute="trailing" constant="91" id="FSB-z7-ACC"/>
-                            <constraint firstItem="RvB-uf-IIA" firstAttribute="centerX" secondItem="K19-3M-4pi" secondAttribute="centerX" id="M1K-Uu-iHl"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="height" secondItem="K19-3M-4pi" secondAttribute="height" multiplier="0.2" id="FUO-h2-Oah"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="top" secondItem="6wb-gx-98n" secondAttribute="bottom" id="GVZ-vH-ct4"/>
+                            <constraint firstItem="oNK-BU-uka" firstAttribute="centerY" secondItem="K19-3M-4pi" secondAttribute="centerY" id="HU7-Jw-gwU"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="centerX" secondItem="K19-3M-4pi" secondAttribute="centerX" id="LYg-zh-hSj"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="width" secondItem="K19-3M-4pi" secondAttribute="width" id="MRn-0H-cyL"/>
                             <constraint firstItem="Yan-nO-bd4" firstAttribute="leading" secondItem="K19-3M-4pi" secondAttribute="leadingMargin" constant="73" id="OQj-2H-gMP"/>
                             <constraint firstItem="Yan-nO-bd4" firstAttribute="baseline" secondItem="jVt-QL-gR2" secondAttribute="baseline" id="QHK-J6-H2M"/>
                             <constraint firstItem="oNK-BU-uka" firstAttribute="height" secondItem="K19-3M-4pi" secondAttribute="height" multiplier="0.1" id="SQT-iW-yCm"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="top" secondItem="6wb-gx-98n" secondAttribute="bottom" id="U0R-d2-L2S"/>
+                            <constraint firstItem="oNK-BU-uka" firstAttribute="top" secondItem="0QJ-3y-QPO" secondAttribute="bottom" id="Wuu-hC-4Gu"/>
+                            <constraint firstItem="oNK-BU-uka" firstAttribute="top" secondItem="0QJ-3y-QPO" secondAttribute="bottom" constant="10" id="YNI-Q9-hvo"/>
                             <constraint firstItem="mzY-DS-oUo" firstAttribute="top" secondItem="jVt-QL-gR2" secondAttribute="bottom" constant="25" id="aAx-aK-Qbc"/>
-                            <constraint firstItem="7Ba-Hp-Jvi" firstAttribute="width" secondItem="K19-3M-4pi" secondAttribute="width" id="lBB-3b-WQf"/>
-                            <constraint firstItem="oNK-BU-uka" firstAttribute="top" secondItem="7Ba-Hp-Jvi" secondAttribute="bottom" constant="22" id="omo-PU-LdC"/>
+                            <constraint firstItem="oNK-BU-uka" firstAttribute="top" secondItem="0QJ-3y-QPO" secondAttribute="bottom" constant="108" id="iIL-cy-HER"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="height" secondItem="K19-3M-4pi" secondAttribute="height" multiplier="0.3" id="pPR-eB-Gm8"/>
                             <constraint firstItem="oNK-BU-uka" firstAttribute="width" secondItem="K19-3M-4pi" secondAttribute="width" id="r9n-bo-evA"/>
-                            <constraint firstItem="RvB-uf-IIA" firstAttribute="top" secondItem="6wb-gx-98n" secondAttribute="bottom" constant="8" id="umX-rN-uvc"/>
+                            <constraint firstItem="0QJ-3y-QPO" firstAttribute="top" secondItem="6wb-gx-98n" secondAttribute="bottom" id="ypf-Xq-4cW"/>
                             <constraint firstItem="oNK-BU-uka" firstAttribute="centerX" secondItem="K19-3M-4pi" secondAttribute="centerX" id="yqa-iA-80L"/>
+                            <constraint firstItem="oNK-BU-uka" firstAttribute="top" secondItem="0QJ-3y-QPO" secondAttribute="bottom" constant="-1" id="zAT-ER-Iq5"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="FUO-h2-Oah"/>
+                                <exclude reference="GVZ-vH-ct4"/>
+                                <exclude reference="U0R-d2-L2S"/>
+                                <exclude reference="ypf-Xq-4cW"/>
+                                <exclude reference="HU7-Jw-gwU"/>
+                                <exclude reference="YNI-Q9-hvo"/>
+                                <exclude reference="iIL-cy-HER"/>
+                                <exclude reference="zAT-ER-Iq5"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="colorPicker" destination="oNK-BU-uka" id="N0T-AO-Px3"/>
                         <outlet property="done" destination="jVt-QL-gR2" id="dnS-IL-oon"/>
+                        <outlet property="legendBox" destination="rqQ-4i-f7L" id="Maz-zX-uxv"/>
                         <outlet property="name" destination="RvB-uf-IIA" id="c81-bs-UpI"/>
                         <outlet property="value" destination="7Ba-Hp-Jvi" id="4bd-Ef-YZt"/>
                     </connections>
